<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <DUT Name="ST_CameraStates" Id="{49c0d3be-f867-4d07-be32-4e75a45c528f}">
    <Declaration><![CDATA[TYPE ST_CameraState :
STRUCT
    stsIdle              : BOOL := FALSE;
    stsReadyToTrigger    : BOOL := FALSE;
    stsTriggering        : BOOL := FALSE;
    stsAcquiring         : BOOL := FALSE;
    stsWaitResults       : BOOL := FALSE;
    stsProcessResults    : BOOL := FALSE;
    stsError             : BOOL := FALSE;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>