<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <GVL Name="IO_Mapping" Id="{9406d71c-8343-4ba7-a962-e4fa15adffb0}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	
	// COGNEX INSIGHT 7000 EIP EDS MAPPING
	//--------------------------------------
	// Inputs
	inpTriggerReady AT %I* : BOOL;
	inpTriggerAck AT %I* : BOOL;
	inpAcquiring AT %I* : BOOL;
	inpMissedAcq AT %I* : BOOL;
	inpOfflineReason AT %I* : USINT; // 3 bits represented as USINT (8 bits)
	inpOnline AT %I* : BOOL;
	inpInspecting AT %I* : BOOL;
	inpInspectionComplete AT %I* : BOOL;
	inpResultsBufferOverrun AT %I* : BOOL;
	inpResultsValid AT %I* : BOOL;
	inpCommandExecuting AT %I* : BOOL;
	inpCommandComplete AT %I* : BOOL;
	inpCommandFailed AT %I* : BOOL;
	inpNoname0ArrBIT AT %I* : ARRAY[0..1] OF BOOL;
	inpExposureComplete AT %I* : BOOL;
	inpJobPass AT %I* : BOOL;
	inpTestRunReady AT %I* : BOOL;
	inpNoname1ArrBIT AT %I* : ARRAY[0..1] OF BOOL;
	inpCurrentJobID AT %I* : UINT;
	inpAcquisitionID AT %I* : UINT;
	inpInspectionID AT %I* : UINT;
	inpInspectionResultCode AT %I* : INT;
	inpInspectionResults AT %I* : BYTE;
	inpInspectionResults1 AT %I* : BYTE;
	inpInspectionResults2 AT %I* : BYTE;
	inpInspectionResults3 AT %I* : BYTE;
	inpInspectionResults4 AT %I* : BYTE;
	inpInspectionResults5 AT %I* : BYTE;
	inpInspectionResults6 AT %I* : BYTE;
	inpInspectionResults7 AT %I* : BYTE;
	inpInspectionResults8 AT %I* : BYTE;
	inpInspectionResults9 AT %I* : BYTE;
	inpInspectionResults10 AT %I* : BYTE;
	
	// Outputs
	outTriggerEnable AT %Q* : BOOL;
	outTriggerCamera AT %Q* : BOOL;
	outBufferResultsEnable AT %Q* : BOOL;
	outInspectionResultsAck AT %Q* : BOOL;
	outExecuteCommand AT %Q* : BOOL;
	outNoname0ArrBIT AT %Q* : ARRAY[0..1] OF BOOL;
	outSetOffline AT %Q* : BOOL;
	outSoftEvent0 AT %Q* : BOOL;
	outSoftEvent1 AT %Q* : BOOL;
	outSoftEvent2 AT %Q* : BOOL;
	outSoftEvent3 AT %Q* : BOOL;
	outSoftEvent4 AT %Q* : BOOL;
	outSoftEvent5 AT %Q* : BOOL;
	outSoftEvent6 AT %Q* : BOOL;
	outSoftEvent7 AT %Q* : BOOL;
	outCommand AT %Q* : UINT;
	outUserData AT %Q* : BYTE;
	outUserData1 AT %Q* : BYTE;
	outUserData2 AT %Q* : BYTE;
	outUserData3 AT %Q* : BYTE;
	outUserData4 AT %Q* : BYTE;
	outUserData5 AT %Q* : BYTE;
	outUserData6 AT %Q* : BYTE;
	outUserData7 AT %Q* : BYTE;
	outUserData8 AT %Q* : BYTE;
	outUserData9 AT %Q* : BYTE;
	outUserData10 AT %Q* : BYTE;
	//--------------------------------------
	
	
	// Regular IO 
	input1 AT %I* : BOOL;
	input2 AT %I* : BOOL;
	
	output1 AT %Q* : BOOL;
	output2 AT %Q* : BOOL;

END_VAR
]]></Declaration>
  </GVL>
</TcPlcObject>